<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_dlg_add_dutchpay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ll_dlg_add_dutchpay_group_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--<android.support.constraint.ConstraintLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_add_dutchpay"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_tb_dutchpay_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_add_dutchpay"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/toolbar_text_size"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/add_dutchpay_container_padding_bottom"
                android:paddingLeft="@dimen/add_dutchpay_container_padding_left"
                android:paddingRight="@dimen/add_dutchpay_container_padding_right"
                android:paddingTop="@dimen/add_dutchpay_container_padding_top">

                <RadioGroup
                    android:id="@+id/rg_dlg_add_dutchpay_send_receive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rb_dlg_add_dutchpay_send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/string_to_send"/>

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rb_dlg_add_dutchpay_receive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/string_to_receive"/>

                </RadioGroup>

                <LinearLayout
                    android:id="@+id/ll_dlg_add_dutchpay_group_title"
                    style="@style/FormRow_Group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/ll_dlg_add_dutchpay_group_amount"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rg_dlg_add_dutchpay_send_receive">

                    <EditText
                        android:id="@+id/et_dlg_add_dutchpay_title"
                        style="@style/FormRow_Content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_dutchpay_title"
                        android:inputType="text"/>

                    <TextView
                        android:id="@+id/tv_dlg_add_dutchpay_title_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_msg_err_input_title"
                        android:visibility="gone"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_dlg_add_dutchpay_group_amount"
                    style="@style/FormRow_Group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/ll_dlg_add_dutchpay_group_date"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_dlg_add_dutchpay_group_title">

                    <EditText
                        android:id="@+id/et_dlg_add_dutchpay_amount_total"
                        style="@style/FormRow_Content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_amount"
                        android:inputType="numberDecimal"/>

                    <TextView
                        android:id="@+id/tv_dlg_add_dutchpay_amount_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_msg_err_input_amount"
                        android:visibility="gone"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_dlg_add_dutchpay_group_date"
                    style="@style/FormRow_Group_Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/ll_dlg_add_dutchpay_group_num_of_people"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_dlg_add_dutchpay_group_amount">


                    <TextView
                        android:id="@+id/tv_dlg_add_dutchpay_current_date"
                        style="@style/FormRow_Date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>

                    <ImageButton
                        android:id="@+id/ibtn_dlg_add_dutchpay_set_date"
                        style="@style/ButtonDateSet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_set_date"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_dlg_add_dutchpay_group_num_of_people"
                    style="@style/FormRow_Group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/ll_dlg_add_dutchpay_group_quotient"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_dlg_add_dutchpay_group_date">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_dlg_add_dutchpay_num_of_people"
                            style="@style/FormRow_Content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/string_num_of_people"
                            android:inputType="numberDecimal"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_people_unit"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_dlg_add_dutchpay_num_of_people_err"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_msg_err_input_nop"
                        android:visibility="gone"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_dlg_add_dutchpay_group_quotient"
                    style="@style/FormRow_Group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/lv_dlg_add_dutchpay_people"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_dlg_add_dutchpay_group_num_of_people">

                    <TextView
                        android:id="@+id/tv_dlg_add_dutchpay_num_of_people"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_each"
                        android:textColor="@color/colorSubtext"
                        android:textSize="@dimen/text_small"/>


                    <EditText
                        android:id="@+id/et_dlg_add_dutchpay_quotient"
                        style="@style/FormRow_Content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_each_won"
                        android:textColor="@color/colorSubtext"
                        android:textSize="@dimen/text_small"/>

                    <TextView
                        android:id="@+id/tv_dlg_add_dutchpay_quotient_err"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_msg_err_input_amount"
                        android:visibility="gone"/>

                </LinearLayout>

                <kr.latera.mopler.view.NonScrollListView
                    android:id="@+id/lv_dlg_add_dutchpay_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:descendantFocusability="blocksDescendants"
                    app:layout_constraintBottom_toTopOf="@+id/cl_dlg_add_dutchpay_list_expander"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll_dlg_add_dutchpay_group_quotient"/>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_dlg_add_dutchpay_list_expander"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dialog_add_dutchpay_list_expander_height"
                    android:background="@drawable/gray_sided"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lv_dlg_add_dutchpay_people">
                    <!--app:layout_constraintBottom_toTopOf="@+id/ll_dlg_add_dutchpay_group_buttons"-->


                    <ImageView
                        android:id="@+id/iv_dlg_add_dutchpay_list_expander_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_keyboard_arrow_down_black_48dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>


                </android.support.constraint.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/ll_dlg_add_dutchpay_group_buttons"
                    style="@style/DialogButtonGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nsv_dlg_add_dutchpay">
                    <!--app:layout_constraintTop_toBottomOf="@+id/ll_dlg_add_dutchpay_list_expander">-->

                    <Button
                        android:id="@+id/btn_dlg_add_dutchpay_cancel"
                        style="@style/DialogButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_cancel"/>

                    <Button
                        android:id="@+id/btn_dlg_add_dutchpay_ok"
                        style="@style/DialogButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_ok"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <!--</android.support.constraint.ConstraintLayout>-->
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>